--- a/tasks/consul-template.yml
+++ b/tasks/consul-template.yml
@@ -8,3 +8,8 @@
     src: /tmp/consul-template_0.23.0_linux_amd64.zip
     dest: /usr/local/bin
     remote_src: yes
+
+- name: remove temporary consul-template installation
+  file:
+    path:  /tmp/consul-template_0.23.0_linux_amd64.zip
+    state: absent
