--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -1,15 +1,63 @@
+- name: checking if consul is already installed
+  stat:
+    path: '/usr/local/bin/consul'
+  register: consul_installed
+
 - name: download consul
   get_url:
     url: https://releases.hashicorp.com/consul/1.6.2/consul_1.6.2_linux_amd64.zip
     dest: /tmp/consul_1.6.2_linux_amd64.zip
-
+  when: consul_installed.stat.exists != true
+  
 - name: extract consul
   unarchive:
     src: /tmp/consul_1.6.2_linux_amd64.zip
     dest: /usr/local/bin
     remote_src: yes
+  when: consul_installed.stat.exists != true
     
 - name: remove temporary consul installation
   file:
     path:  /tmp/consul_1.6.2_linux_amd64.zip
     state: absent
+    
+- name: configuring consul service
+  copy:
+    src: ./tempaltes/consul.service.j2
+    dest: /etc/systemd/system/consul.service
+    owner: root
+    group: root
+    mode: 0644
+
+- name: ensure data folder exists
+  file:
+    path: "/opt/data/consul"
+    state: directory
+    recurse: yes
+    owner: root
+    group: root
+
+- name: ensure consul conf folder exists
+  file:
+    path: "/etc/consul.d"
+    state: directory
+    recurse: yes
+    owner: root
+    group: root
+
+- name: adding consul server config
+  copy:
+    src: ./files/consul.d/server.json
+    dest: /etc/consul.d/server.json
+    owner: root
+    group: root
+
+- name: ensure systemd daemon was reloaded
+  systemd:
+    daemon_reload: yes
+
+- name: ensure consul is started
+  systemd:
+    name: consul
+    state: started
+    enabled: yes
