--- a/main.yml
+++ b/main.yml
@@ -5,3 +5,4 @@
     - import_tasks: "tasks/consul.yml"
     - import_tasks: "tasks/consul-template.yml"
     - import_tasks: "tasks/docker.yml"
+    - import_tasks: "tasks/registrator.yml"
