Added deploy task

--- a/main.yml
+++ b/main.yml
@@ -6,3 +6,4 @@
     - import_tasks: "tasks/consul-template.yml"
     - import_tasks: "tasks/docker.yml"
     - import_tasks: "tasks/registrator.yml"
+    - import_tasks: "tasks/deploy.yml"
