--- a/tasks/consul-template.yml
+++ b/tasks/consul-template.yml
@@ -16,8 +16,8 @@
 
 - name: configuring consul-template service
   copy:
-    src: ./templates/consul.service.j2
-    dest: /etc/systemd/system/consul.service
+    src: ./templates/consul-template.service.j2
+    dest: /etc/systemd/system/consul-template.service
     owner: root
     group: root
     mode: 0644
@@ -29,6 +29,7 @@
     recurse: yes
     owner: root
     group: root
+    remote_src: yes
 
 - name: adding consul-template config
   copy:
